--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
+    <!--<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <!-- https://github.com/spring-projects/spring-shell/issues/324 -->
         <version>3.1.0</version>
-        <!--
-            Spring Boot [2.7.0] is not compatible with this Spring Cloud release train',
-            action = 'Change Spring Boot version to one of the following versions [2.4.x, 2.5.x].
-        -->
-        <!--<version>2.7.0</version>-->
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
+    </parent>-->
 
     <groupId>ro.go.adrhc</groupId>
     <artifactId>autorizatii-de-construire-certificate-de-urbanism-server</artifactId>
@@ -40,24 +34,6 @@
             <groupId>ro.go.adrhc</groupId>
             <artifactId>autorizatii-de-construire-certificate-de-urbanism</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.shell</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.shell</groupId>
-                    <artifactId>spring-shell-starter</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.shell</groupId>
-                    <artifactId>spring-shell-autoconfigure</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.shell</groupId>
-                    <artifactId>spring-shell-core</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -105,6 +81,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>3.2.4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
@@ -136,7 +119,10 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -169,11 +155,11 @@
     <pluginRepositories>
         <pluginRepository>
             <id>spring-snapshots</id>
-            <url>https://repo.spring.io/snapshot/</url>
+            <url>https://repo.spring.io/snapshot</url>
         </pluginRepository>
         <pluginRepository>
             <id>spring-milestones</id>
-            <url>https://repo.spring.io/milestone/</url>
+            <url>https://repo.spring.io/milestone</url>
         </pluginRepository>
     </pluginRepositories>
 
