--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,12 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
-        <maven-surefire-failsafe-plugin.version>3.1.2</maven-surefire-failsafe-plugin.version>
+
+        <maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
+        <maven-surefire-failsafe-plugin-version>3.2.5</maven-surefire-failsafe-plugin-version>
+
         <!--<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>-->
-        <spring-cloud.version>2022.0.3</spring-cloud.version>
+        <spring-cloud.version>2023.0.1</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -114,7 +117,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <!--<version>3.11.0</version>-->
+                <version>${maven-compiler-plugin-version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -128,7 +131,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-failsafe-plugin.version}</version>
+                <version>${maven-surefire-failsafe-plugin-version}</version>
                 <configuration>
                     <argLine>--enable-preview</argLine>
                 </configuration>
@@ -136,7 +139,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven-surefire-failsafe-plugin.version}</version>
+                <version>${maven-surefire-failsafe-plugin-version}</version>
                 <configuration>
                     <argLine>--enable-preview</argLine>
                 </configuration>
